force-app/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Used to note the solution/Answer-CCRM-2602</description>
    <label>Answer</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>