force-app/main/default/objects/Knowledge__kav/fields/Article_Governance__c.field-meta.xml
<CustomField>
    <fullName>Article_Governance__c</fullName>
    <label>Article Governance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experience Based</fullName>
                <default>true</default>
                <label>Experience Based</label>
            </value>
            <value>
                <fullName>Compliance Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>