force-app/main/default/objects/Knowledge__kav/fields/Bug_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Bug_Ticket_Number__c</fullName>
    <description>Used to note the Bug number-CCRM-2602</description>
    <label>Bug/Ticket Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>