force-app/main/default/objects/Knowledge__kav/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>Used to note down the reason for the cause-CCRM-2602</description>
    <label>Cause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>