force-app/main/default/objects/Knowledge__kav/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Used to note the error message-CCRM-2602</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>