force-app/main/default/objects/Knowledge__kav/fields/Internal_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Internal_Resolution__c</fullName>
    <description>Used to note the internal resolution description-CCRM-2602</description>
    <label>Internal Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>