force-app/main/default/objects/Knowledge__kav/fields/Issues_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Issues_Symptoms__c</fullName>
    <description>used to record the issues or symptoms being experienced by the customer</description>
    <label>Issues/Symptoms</label>
    <type>TextArea</type>
</CustomField>