force-app/main/default/objects/Knowledge__kav/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Renamed field label from &quot;Product&quot; to &quot;Article Category&quot; and added new pick list values according to  user story CCRM-3519</description>
    <label>Article Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PIMS</fullName>
            </value>
            <value>
                <fullName>Hardware and Operating System</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Client Communications</fullName>
            </value>
            <value>
                <fullName>Internal Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>