force-app/main/default/objects/Knowledge__kav/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <description>Renamed field label from &quot;Product Category&quot; to &quot;Article Sub-Category&quot; and added new pick list values according to user story CCRM-3519</description>
    <label>Article Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Ancillary Devices</fullName>
            </value>
            <value>
                <fullName>Announcements</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Backups</fullName>
            </value>
            <value>
                <fullName>Billable Item Management</fullName>
            </value>
            <value>
                <fullName>Calendar and Scheduling</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Clients and Patients</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>DICOM</fullName>
            </value>
            <value>
                <fullName>Invoicing and Account Balance</fullName>
            </value>
            <value>
                <fullName>Lab In House</fullName>
            </value>
            <value>
                <fullName>Lab Reference</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Operating System</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Practice Performance</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Procedures</fullName>
            </value>
            <value>
                <fullName>Release Notes</fullName>
            </value>
            <value>
                <fullName>Reminders</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>System and Practice</fullName>
            </value>
            <value>
                <fullName>Users and Rights</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>