force-app/main/default/objects/Knowledge__kav/fields/Product_Version__c.field-meta.xml
<CustomField>
    <fullName>Product_Version__c</fullName>
    <label>Product Version</label>
    <length>45</length>
    <type>Text</type>
</CustomField>