force-app/main/default/objects/Knowledge__kav/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Used to note the questions-CCRM-2602</description>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>