force-app/main/default/objects/Knowledge__kav/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Used to note the resolution steps-CCRM-2602</description>
    <label>Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>