force-app/main/default/objects/Knowledge__kav/recordTypes/Problem_Solving.recordType-meta.xml
<RecordType>
    <fullName>Problem_Solving</fullName>
    <active>true</active>
    <label>Problem Solving</label>
</RecordType>