force-app/main/default/objects/Knowledge__kav/validationRules/Candidate_can_share_Articles_internally.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_can_share_Articles_internally</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
ISPICKVAL($User.KCS_Role__c, &quot;Candidate&quot;), 
IsVisibleInCsp= TRUE)</errorConditionFormula>
    <errorMessage>You do not have the necessary level of access to make this Article visible to Customers</errorMessage>
</ValidationRule>