force-app/main/default/objects/Knowledge__kav/validationRules/Candidate_cannot_set_Status_to_Validated.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_cannot_set_Status_to_Validated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
ISPICKVAL($User.KCS_Role__c, &quot;Candidate&quot;),
ISPICKVAL(ValidationStatus, &quot;Validated&quot;)
)</errorConditionFormula>
    <errorMessage>You do not have the necessary level of access to update the status to Validated</errorMessage>
</ValidationRule>