force-app/main/default/objects/Knowledge__kav/validationRules/Status_cannot_set_to_Work_in_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_set_to_Work_in_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
IsVisibleInCsp = TRUE,
ISPICKVAL(ValidationStatus, &quot;Work in Progress&quot;)
)</errorConditionFormula>
    <errorMessage>If this Article is Visible to Customers, the Status cannot be Work in Progress</errorMessage>
</ValidationRule>